<resources>
    <string name="app_name">My Todo Manager</string>
    <string name="action_settings">Settings</string>

    <string name="default_todo_id">-1</string>
    <string name="default_todo_value">empty</string>
    <string name="default_todo_due_date">0</string>

    <string name="err_should_not_be_empty">Item should not be empty!</string>

    <string name="lbl_date">Date:</string>
    <string name="lbl_title">Title:</string>

    <string name="txt_add">Add</string>
    <string name="txt_add_your_task_title">Add Your Task Title</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_save">Save</string>
    <string name="txt_settings">Settings</string>

    <string name="txt_todo_list">Todo List</string>

    <string name="hntTypeHere" />
</resources>
